--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
 </head>
 
 <body style="position: absolute; width: 100%; height: 100%; margin: 0px;">
-    <script src="../Kicsy2/Kicsy2.js"></script>
+
+
 
 
 
     <script>
+
+        let n = Math.random();
+        let file = `Kicsy2.js?n=${n}`;
+        let s = document.createElement("script");
+        s.src = file;
+        document.head.appendChild(s);
 
 
         Kicsy.load(
