--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
                 "Reporte360UnidadNegocio.js",
                 "ReporteCargoPersonal.js",
                 "ReporteCargoUnidadDeNegocio.js",
-                "ReporteCargoUnidadDeNegocioYDepartamento.js"
+                "ReporteCargoUnidadDeNegocioYDepartamento.js",
+                "ReporteCargoCompania.js",
+                "ReporteObjetivosPersonal.js",
+                "ReporteObjetivosPorEmpresas.js",
+                "ReporteObjetivosUnidadDeNegocio.js"
             ],
             postLoadCallback: () => {
                 KLauncher.pathIcons = "media/icons/";
@@ -42,7 +46,7 @@
                     KMessage("entrada", {}, "run").send();
                 }
             }
-        
+
         }
 
 
