--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                 "ReporteObjetivosPersonal.js",
                 "ReporteObjetivosPorEmpresas.js",
                 "ReporteObjetivosUnidadDeNegocio.js",
-                "ReporteObjetivosUnidadDeNegocioYDepartamento.js"
+                "ReporteObjetivosUnidadDeNegocioYDepartamento.js",
+               
             ],
             postLoadCallback: () => {
                 KLauncher.setBodyCssText("background-color: white;");
