Nuevo reporte de habilidades técnicas

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 "ReporteObjetivosPorEmpresas.js",
                 "ReporteObjetivosUnidadDeNegocio.js",
                 "ReporteObjetivosUnidadDeNegocioYDepartamento.js",
+                "ReporteHabilidadesPersonal.js"
                
             ],
             postLoadCallback: () => {
