--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                 "ReporteObjetivosPorEmpresas.js",
                 "ReporteObjetivosUnidadDeNegocio.js",
                 "ReporteObjetivosUnidadDeNegocioYDepartamento.js",
-                "ReporteHabilidadesPersonal.js"
+                "ReporteHabilidadesPersonal.js",
+                "ReporteHabilidadesCompania.js",
+                "ReporteHabilidadesUnidadDeNegocioYDepartamento.js",
                
             ],
             postLoadCallback: () => {
