--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 "ReporteObjetivosUnidadDeNegocioYDepartamento.js",
                 "ReporteHabilidadesPersonal.js",
                 "ReporteHabilidadesCompania.js",
+                "ReporteHabilidadesUnidadDeNegocio.js",
                 "ReporteHabilidadesUnidadDeNegocioYDepartamento.js",
                
             ],
