--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selva</title>
+    <link rel="icon" type="image/x-icon" href="media/icons/selva-icono.ico">
 </head>
 
 <body style="position: absolute; width: 100%; height: 100%; margin: 0px;">
@@ -26,6 +27,7 @@
                 "Entrada.js",
                 "Expediente.js",
                 "Ficha.js",
+                "PinEnLote.js",
                 "AdministrarCompetencias360.js",
                 "AdministrarCompetenciasPorCargo.js",
                 "AdministrarAsignaciones.js",
